--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     environment: main
     outputs:
-      image-tag: ${{ steps.set-image-tag.outputs.IMAGE_TAG }} 
+      image-tag: ${{ steps.set-image-tag.outputs.IMAGE_TAG }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -48,7 +48,7 @@ jobs:
 
       # Summarize cfn_nag failures and return it as exit code
       - name: Check for cfn_nag scan failures
-        id: cfn-nag-check-failure        
+        id: cfn-nag-check-failure
         run: |
           exit `grep Failures cfn_nag.out | awk '{ SUM += $3} END { print SUM }'`
 
@@ -61,7 +61,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          mask-password: 'true'
+          mask-password: "true"
 
       - name: Detect Dockerfile changes
         id: detect-dockerfile-changes
@@ -94,7 +94,7 @@ jobs:
       - name: Set new image tag
         id: set-image-tag
         run: |
-          [[ -z $IMAGE_TAG ]] && echo "IMAGE_TAG=latest" >> $GITHUB_OUTPUT && echo "IMAGE_TAG=latest" >> $GITHUB_ENV || echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT && echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV 
+          [[ -z $IMAGE_TAG ]] && echo "IMAGE_TAG=latest" >> $GITHUB_OUTPUT && echo "IMAGE_TAG=latest" >> $GITHUB_ENV || echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT && echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
       - name: ECR image scan
         id: image-scan
@@ -131,6 +131,31 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       # CloudFormation Lint
+      - name: Cfn Lint
+        id: cfn-lint
+        uses: scottbrenner/cfn-lint-action@v2
+
+      - name: Run Cfn Lint
+        id: cfn-lint-run
+        run: |
+          shopt -s globstar # enable globbing
+          cfn-lint --version
+          cfn-lint -t ./templates/*.yaml
+
+      # CloudFormation Static Analysis
+      - name: Cfn Nag
+        id: cfn-nag
+        uses: stelligent/cfn_nag@master
+        with:
+          input_path: templates
+          #output_path: cfn_nag.sarif
+
+      # Summarize cfn_nag failures and return it as exit code
+      - name: Check for cfn_nag scan failures
+        id: cfn-nag-check-failure
+        run: |
+          exit `grep Failures cfn_nag.out | awk '{ SUM += $3} END { print SUM }'`
+
       # CloudFormation Static Analysis
       # Build docker images
       # Set new image tag
